--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                <div class="sidebar" id="sidebar">
                     <a class="active" href="#" target="_blank">Github</a>
                     <a class="active" href="https://www.instagram.com/vanshnotfound" target="_blank">Instagram</a>
-                    <a class="active" href="#" target="_blank">YouTube</a>
+                    <a class="active" href="https://www.youtube.com/@OREO-ry9ht" target="_blank">YouTube</a>
                     <a class="active" href="https://telegram.dog/" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
@@ -79,7 +79,7 @@
                               <a href="https://telegram.dog/" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
-                              <a href="#" class="icon">
+                              <a href="https://www.youtube.com/@OREO-ry9ht" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
                          </div>
